# UAV_ROS_FOXY

./: 111.py  99-usb-serial.rules  GPIO.py  auto_start.bash  info.py  lidar.bash  readme.md  t265.bash  test.py
install/: local_setup.sh  setup.sh
install/anolink/share/anolink/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cartographer/share/cartographer/: package.sh
install/cartographer_ros/lib/cartographer_ros/: occupancy_grid_node  pbstream_to_ros_map_node
install/cartographer_ros/share/cartographer_ros/: package.sh
install/cartographer_ros_msgs/share/cartographer_ros_msgs/: package.sh
install/imu/lib/imu/: imu_serial
install/imu/share/imu/: package.dsv  package.ps1  package.sh  package.xml
install/lslidar_driver/lib/lslidar_driver/: lslidar_driver_node
install/lslidar_driver/share/lslidar_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/camera/: package.xml  setup.py
src/camera/camera/: bottom_camera.py
src/imu/: setup.py
src/imu/imu/: imu_serial.py
src/lidar_processor/: package.xml  setup.cfg  setup.py
src/lidar_processor/lidar_processor/: lidar_scanner_node.py
src/lslidar_driver/launch/: lsn10_launch.py
src/lslidar_driver/src/: lslidar_driver.cc
src/my_cartographer/: CMakeLists.txt
src/my_cartographer/config/: my_cartogrpaher_2d.lua
src/my_cartographer/launch/: run_launch.py
src/my_cartographer/rviz/: default.rviz
src/my_cartographer/urdf/: backpack_2d.urdf
src/tf_init/: setup.cfg  setup.py
src/tf_init/tf_init/: tf_publisher.py
(+99 files in other folders)
