<?xml version="1.0"?>
<package format="3">
  <name>lidar_processor</name>
  <version>0.0.0</version>
  <description>A package to process lidar data</description>
  <maintainer email="1192511920@qq.com">ubuntu</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>